// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`record webgl recordCanvas FPS should record snapshots 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  }
]"
`;

exports[`record webgl should batch events by RAF 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 1
            }
          ]
        },
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a canvas element 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a canvas element before the canvas gets added (webgl2) 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 7,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"canvas\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 11
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 11,
      \\"type\\": 2,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        },
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a canvas element before the canvas gets added 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 7,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"canvas\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 11
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 11,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        },
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a webgl2 canvas element 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 2,
      \\"commands\\": [
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record webgl variables 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        },
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 1
            }
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record webgl variables in reverse order 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6
                      }
                    ],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10
                  }
                ],
                \\"id\\": 7
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 1
            }
          ]
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        }
      ]
    }
  }
]"
`;
